--- a/app/assets/stylesheets/line_items.scss
+++ b/app/assets/stylesheets/line_items.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the Comments controller here.
+// Place all the styles related to the line_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-#add-comment-section {
-  display: none;
-}
