--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,74 +1,54 @@
-<h1>Listing Products</h1>
-<% if @products.nil? %>
-<div>
-<div>
-<h3>Others Products</h3>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Category</th>
-    <th>Price</th>
-    <th></th>
-  </tr>
+<!-- Products -->
+    <div class="col-lg-11 col-md-9 col-sm-8 col-xs-6" style="padding:50px 8px 8px 40px;">
+        <!-- Featured Collection -->
+        <div class="page-header">
+          <% if current_user %>
+            <%= link_to 'Add New Product', new_product_path, :class=> "btn btn-success float-right" %>
+          <% end %>
+          <h1>Products</h1>
+        </div><hr>
+        <br />
+        <div class="row">
+            <% @products.each do |product| %>
+              <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
+                      <% if product.images.attached? %>
+                          <%= image_tag(product.images.first, class: "col-lg-12 zoom", style: "height:250px") %>
+                        <% else %>
+                          <%= image_tag 'product.png', class: "col-lg-12 zoom", style: "height:250px" %>
+                      <% end %>
+                  <div class="text-center">
+                      <h4><%= product.name %></h4>
+                      <h6><%= product.price %> Rs</h6>
 
-  <% @others_products.each do |product| %>
-    <tr>
-      <td><%= product.name %></td>
-      <td><%= product.category %></td>
-      <td><%= product.price %></td>
-      <td><%= link_to 'Show', product_path(product) %></td>
+                      <%= link_to 'Show', product_path(product), :class => "btn btn-primary btn-sm" %>
+                      <% if current_user && product.user == current_user %>
+                        <%= link_to 'Edit', edit_product_path(product), :class => "btn btn-primary btn-sm"  %>
+                        <%= link_to 'Destroy', product_path(product), :class => "btn btn-danger btn-sm",
+                        method: :delete, data: { confirm: 'Are you sure?' } %>
+                      <% else %>
+                        <%= link_to "Add to Cart", product_line_items_path(product), method: :post, :class => "btn btn-success btn-sm" %>
+                      <% end %>
+                      <br><span class="badge badge-pill badge-secondary">
+                        <%= pluralize(product.comments.count, "Comment") %>
+                      </span>
 
-    </tr>
-  <% end %>
-</table>
-</div>
+                  </div>
+              </div>
+              <% end %>
 
-  <div>
-    <h3>My Products</h3>
-    <table title="My Products">
-      <tr>
-        <th>Name</th>
-        <th>Category</th>
-        <th>Price</th>
-        <th></th>
-      </tr>
+        </div>
 
-      <% @my_products.each do |product| %>
-        <tr>
-          <td><%= product.name %></td>
-          <td><%= product.category %></td>
-          <td><%= product.price %></td>
-          <td><%= link_to 'Show', product_path(product) %></td>
-          <td><%= link_to 'Edit', edit_product_path(product) %></td>
-          <td><%= link_to 'Destroy', product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <hr />
 
-        </tr>
-      <% end %>
-
-    </table>
-
-    <%= link_to 'Add new Product', new_product_path %>
-  </div>
-</div>
-<% else %>
-<div>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Category</th>
-    <th>Price</th>
-    <th></th>
-  </tr>
-
-  <% @products.each do |product| %>
-    <tr>
-      <td><%= product.name %></td>
-      <td><%= product.category %></td>
-      <td><%= product.price %></td>
-      <td><%= link_to 'Show', product_path(product) %></td>
-    </tr>
-  <% end %>
-</table><br>
-<%= link_to 'Add new Product', new_product_path %>
-</div>
-<% end %>
+    </div>
