--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,10 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Add Product</h1>
+    </div>
+  </div>
 
-<h1>New Product</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', products_path %>
+  <%= render 'form' %>
+  <%= link_to 'Back', products_path %>
+</div>
