--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,25 +1,69 @@
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<div class="container-fluid">
+	<div class="row" style="background-color:white;">
+    <div class="col-lg-5 col-md-5 col-sm-6">
+    	<div class="product-slider">
+        <div id="carousel" class="carousel slide" data-ride="carousel" style="height:408px;">
+          <div class="carousel-inner ">
+            <div class="item active">
+            	<%= image_tag(@product.images.first, :style => "height:400px;")  if @product.images.attached? %>
+            </div>
+          </div>
+        </div>
 
-<p>
-  <strong>Category:</strong>
-  <%= @product.category %>
-</p>
+      </div>
+    </div>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
 
-<h2>Comments</h2>
-<%= render @product.comments %>
+    <div class="col-lg-5 col-md-5 col-sm-6" style="height:auto; float:left; padding:40px 10px 0px 0px;">
+      <div>
+      	<br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <span style="font-weight:600; font-size:21px; display:block;"><%= @product.name %></span>
+        <span style="font-weight:600; font-size:21px; display:block;"><%= @product.description %></span>
+        <br />
+        <span style="font-weight:700; font-size:25px; display:block; color:orange;"><%= @product.price %> Rs</span>
 
-<%= link_to 'Add Comment', '#', id: "add-comment-link" %>
-<section id="add-comment-section">
-<h2>Add a comment:</h2>
-<%= render 'comments/form' %>
-</section>
-<%= link_to 'Edit', edit_product_path(@product) %>
-<%= link_to 'Back', products_path %>
+        <div style="padding-top:40px;">
+        	<% if @product.user != current_user %>
+        		<%= button_to "Add to Cart", product_line_items_path(@product), method: :post, :class => "btn btn-lg col-lg-6",
+        	 	:style => "height:auto; border:2px solid white; background-color:orangered; color:white;"%>
+          <% else %>
+          	<%= link_to 'Edit Product', edit_product_path(@product), :class => "btn btn-lg col-lg-6", :style => "border:2px solid white; background-color:blue; color:white;"%>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr />
+
+
+		<div class="row">
+	  	<div style="padding-left:20px; padding-right:20px;">
+	    	<span style="font-weight:700; font-size:40px; display:block; color:black;">Comments</span>
+	  	</div>
+		</div>
+		<% if current_user %>
+			<div class="col-log-4 container-fluid">
+			<%= form_with model:[@product, @comment], :class => "form" do |form| %>
+				<%= form.text_field :body, :style => "width:300px; height:auto" %>
+				<%= form.hidden_field :user_id, :value => current_user.id %>
+				<%= form.submit "Comment", :style => "width:200px; height:40px" %>
+			</div>
+			<% end %>
+		<% else %>
+			<p>You need to <%= link_to "Sign In", new_user_session_path %> before you can comment! </p>
+		<% end %>
+		<div id="comment-pane" class="container-fluid">
+		<% @comments.each do |comment| %>
+			<%= render 'comments/comment', comment: comment %>
+		<% end %>
+	</div>
+	<br><br>
+</div>
+
